feat(jvm): 完成第13章线程安全代码实现、测试及文档
- 实现不可变对象示例(ImmutablePerson)
- 实现synchronized示例(SynchronizedCounter)
- 实现ReentrantLock示例(ReentrantLockCounter)
- 实现CAS/Atomic示例(AtomicCounter)
- 实现ThreadLocal示例(ThreadLocalExample)
- 实现锁优化演示(LockOptimizationDemo)
- 编写16个单元测试用例，全部通过
- 生成代码说明文档、测试报告、面试题总结

涵盖线程安全三大实现方式：
1. 互斥同步(synchronized/ReentrantLock)
2. 非阻塞同步(CAS/Atomic)
3. 无同步方案(不可变对象/ThreadLocal)

包含锁优化技术演示：
- 自旋锁、锁消除、锁粗化
- 轻量级锁、偏向锁、锁升级过程